Primer commit by Oscar Alvarez

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenida Final Five Devs</title>
     <script src="./js/commitJuanCamilo.js"></script>
+    <script src="./js/commitOscarAlvarez.js"></script>
 
 </head>
 
