Primer commit by Diana Rodriguez

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Bienvenida Final Five Devs</title>
     <script src="./js/commitJuanCamilo.js"></script>
     <script src="./js/commitOscarAlvarez.js"></script>
+    <script src="./js/commitDianaRodriguez"></script>
 
 </head>
 
