Primer commit by Viviana De Los Rios

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="./js/commitJuanCamilo.js"></script>
     <script src="./js/commitOscarAlvarez.js"></script>
     <script src="./js/commitDianaRodriguez"></script>
+    <script src="./js/commitVivianaDeLosRios.js"></script>
+    <script src="./js/commitJuanArango.js"></script>
+    
 
 </head>
 
